Changelog for JVCL 3.0
======================
2004-11-05:
- Added the ability for TJvLogFile to save content automatically and limit size to a set value. 
  All this is off by default  // obones
2004-11-04:
- Added packages and support files for Delphi2005 (D9) // peter3
2004-11-01:
- Support for drawing HTML text in a more generic fashion (support functions in JvJVCLUtils) // peter3
- Previous HTML routines in JvHTControls now only calls equivalent in JvJVCLUtils // peter3
- Added custom drawing to JvPrint and also a PrintHTML function // peter3
2004-10-24
- TJvCustomMenuItemPainter.DrawText renamed to DrawItemText to avoid problems in C++ Builder
  (see JvMenus.pas for further details) // obones
2004-09-15
- Added FitCell property to JvDBGrid (Pete Stove and Fred) // obones
- JvButton is no longer registered on the palette. Use JvImgBtn or JvBitbtn instead. This change happened a long time ago, but has not been documented. // peter3
2004-09-14
- JvFormStorage now has two new properties: StoredValuesPath and StoredPropsPath controling
  the path prefix to add for StoredProps and StoredValues. These should not be left empty
  if there is a risk to have duplicates names between StoredProps and StoredValues // obones
- For some unknown reason, JvDBGridFooter MUST come after any other JvDBGrid related 
  unit or dcc32 from BCB6 crashes  // obones
2004-09-13
- Introduced TJvDBGridFooter, the last part of the Ultim components donation // obones
2004-09-05
- Added FloatValue to TJvSimpleXML, defaults to 0.0 if Value is not a floating point number // obones
2004-09-04
- Added new component TJvMultiStringHolder and TJvLookupAutoComplete // ahuser
2004-09-02
- TJvCustomAppXMLStorage: Introduced the WhiteSpaceReplacement property that is used when a node
  name contains a white space. Its default value is an empty string, thus forcing people to
  set its value when they receive the exception telling them that an XML node name cannot
  contain white space // obones
2004-08-18