@@ -1,5 +1,9 @@
 Changelog for JVCL 3.0
 ======================
+2004-11-06:
+- The package generator now uses a condition parser to allow complex expressions to be used.
+  This has no impact on C++ Builder packages, but all Delphi packages were updated to reflect
+  the change: no more IFDEFs are present in the output generated by pg.  // obones
 2004-11-05:
 - Added the ability for TJvLogFile to save content automatically and limit size to a set value. 
   All this is off by default  // obones
